--- a/wk234.md
+++ b/wk234.md
@@ -49,7 +49,7 @@ background(0, 191, 255);
 [my_code.ino](code/my_code.ino)
 
 ## Week 3 (January 24 & 26, 2018)
-*How to put code on github
+* How to put code on github
 -download git
 -what is git? Keep track
 git init
@@ -74,7 +74,8 @@ git push
 	-branch: new ideas from the main idea
 	
 	
-*Review
+* Review
+
 "	Coordinate system
 function setup(){
 createCanvas(x,y); ->size of the canvas
@@ -97,3 +98,11 @@ ellipse(x,y,w,[h])
 *Color system
 fill(R, G, B)
 fill(Black to White)
+
+* Questions
+
+So this happens when you try to push code that is already tracked in your repo. Usually this means that you messed something up, like running git init on your desktop (or any higher level folder). There are a few things you can do.
+1.	You can 'git pull' and merge the changes
+2.	You can download the files from github, and manually copy over your new code to the code on github and push again (probably the best option)
+3.	You can locate the .git folder on your desktop and delete it by running 'rm -rf .git' in the console from your desktop to see if that works (be careful!)
+4.	You can start a new repo if you only have a commit or two.
