--- a/wk567.md
+++ b/wk567.md
@@ -21,7 +21,7 @@ rect(30,30,30,30);
 
 
 * The random() Function - p5.js Tutorial
-'''javascript
+```javascript
 var spot = {
   x: 100,
   y: 50
@@ -42,13 +42,13 @@ function draw(){
     fill(col.r, col.g, col.b);
     ellipse(400, 100, 20, 20);
 }
+```
 
-'''
 * for loops
 
 = single is assigning that's why u have to use ==
 
-'''javascript
+```javascript
 function setup(){
     createCanvas(600, 400);
     background(0);
@@ -64,6 +64,4 @@ function draw(){
     }
     ellipse(300, 200, 100, 100);
 }
-
-'''
-
+```
