--- a/wk567.md
+++ b/wk567.md
@@ -16,8 +16,8 @@ ellipse(33,…)
 for(var i=0, i<1000,i++){
 rect(30,30,30,30);
 }
-3.	Arrays
-4.	classes
+3.	Classes
+4.	Arrays
 
 
 * The random() Function - p5.js Tutorial
@@ -44,7 +44,7 @@ function draw(){
 }
 ```
 
-* for loops
+* 2. for loops
 
 = single is assigning that's why u have to use ==
 
@@ -65,3 +65,55 @@ function draw(){
     ellipse(300, 200, 100, 100);
 }
 ```
+* 3. Classes
+-Objective oriented programming: p5js
+-logic
+
+```javascript
+let ball1; //what is let? like variable
+let ball2;
+let ball3;
+
+function setup() {
+  createCanvas(800, 400);
+  ball1 = new Ball(100, 100, 40, 40, "blue", 1);
+  ball2 = new Ball(100, 200, 40, 40, "yellow", 3);
+  ball3 = new Ball(100, 300, 40, 40, "green", 5);
+}
+
+function draw() {
+  background(0);
+  ball1.display();
+  ball2.display();
+  ball3.display();
+
+  ball1.move();
+  ball2.move();
+  ball3.move();
+}
+
+class Ball{
+    constructor(tempX, tempY, tempWidth, tempHeight, tempShade, tempSpeed){
+        this.x = tempX;
+        this.y = tempY;
+        this.w = tempWidth;
+        this.h = tempHeight;
+        this.shade = tempShade;
+        this.speed = tempSpeed;
+    }
+    //function
+    display(){
+        fill(this.shade);
+        ellipse(this.x, this.y, this.w, this.h);
+    }
+    //function
+    move(){
+        this.x += this.speed;
+        if(this.x > width){
+            this.x = 0;
+        }
+    }
+}
+```
+
+* 4. Arrays
