--- a/wk567.md
+++ b/wk567.md
@@ -76,7 +76,7 @@ let ball3;
 
 function setup() {
   createCanvas(800, 400);
-  ball1 = new Ball(100, 100, 40, 40, "blue", 1);
+  ball1 = new Ball(100, 100, 40, 40, "blue", 1); //new object 
   ball2 = new Ball(100, 200, 40, 40, "yellow", 3);
   ball3 = new Ball(100, 300, 40, 40, "green", 5);
 }
@@ -115,5 +115,19 @@ class Ball{
     }
 }
 ```
+* Class Review
+    class Star(namewhatever) {
+        constructor()
+        this.x = whatever you want
+        this.y
+    }
+    display(){
+    }
+
+    move(){
+
+    }
+    }
+//object oriented
 
 * 4. Arrays
