--- a/wk8910.md
+++ b/wk8910.md
@@ -2,7 +2,7 @@
 
 ## Week 8 (Feb 21, 2018)
 
-*1. Lecture
+1. Lecture
 - https://d3js.org/ (data-dtriven documents)
 - Differences between p5js and javascript
     -javascript: broad language
@@ -14,24 +14,30 @@
     - make a class in a different js file
     - html write the new .js file in
     - preload: loading all the data before drawing
+
 ```javascript
 function preload(){
     table = loadTable('data.csv', 'csv');
 }
 function draw(){
+    for () 
+    bubbles[i].display();
+    bubbles[i].rollover(mouseX, mouseY);
 
 }
+function loadData(){
+bubbles = [];
 
-rollover? 
+bubbles[i] = new Bubble(x, y, d, n);
+}
+
+rollover 
 ```
     - data.csv
     - csv file save as csv
-    - rollover()
+    - rollover(px, py)
 
 
-*2. Arrays
+2. Arrays
 - holder of objects
 - counting starts with 0 
-
-```javascript
-```
