--- a/wk8910.md
+++ b/wk8910.md
@@ -42,3 +42,35 @@ rollover
 2. Arrays
 - holder of objects
 - counting starts with 0 
+
+3. House Cleaning
+- Github pages (create pages to share)
+- fill() by order...it's a recipe order matters
+- push and pop: rotation of text
+- textAlign 
+
+4. Add images
+```javascript
+var images =[];
+
+function preload(){
+    table= loadTable('data/workbook1.csv", "header");
+    for(var i=0; i<5; i==){
+        images[i] = loadImage('images/' + i + ".jpg")
+        loadImage
+    }
+}
+
+class Bubble{
+this.photo = photo;
+}
+```
+
+5. p5js libraries
+- scenemanager
+- Rita
+
+6. API (Application Programming interface)
+- Bag of data
+    Ex) Uber uses Google Map's API
+- https://jsonplaceholder.typicode.com/
