--- a/wk8910.md
+++ b/wk8910.md
@@ -74,3 +74,16 @@ this.photo = photo;
 - Bag of data
     Ex) Uber uses Google Map's API
 - https://jsonplaceholder.typicode.com/
+
+7. Good design?
+- Attention to detail
+- every pixel on canvas should be defended (Why did you pick this? Why is it necessary?)
+- stand alone without the artist's explanation
+
+8. Good art?
+- Defend your work(have answers to what you did what?)
+
+9. Exibit: Final
+- Downtown Durham
+
+10. Bootstrap
