--- a/wk1213.md
+++ b/wk1213.md
@@ -18,11 +18,9 @@
 - short cut: control c: close 
 
 ```javascript
+node bridge.js
 python -m http.server
 ```
-
-- data.csv
-- csv file save as csv
-- rollover(px, py)
+-
  
 
